Fixes Issue 36. A new flag -separator "character" can be specified before -attach option to use the specified separator instead of comma. Example: -separator ":" -attach "filename, with command.pdf:application/pdf"
Fixes Issue 35. Added a 5th filed with -attach to specify the encoding
type. The default encoding type is base64. If no encoding should be used,
specify the 5th field as "none". Also 4th field must be specified as "none"
if no content-id will be used. Eample:
-attach "file.txt,text/plain,a,blah.txt,none,none" -cs utf8

--- a/test/embedded_image.html
+++ b/test/embedded_image.html
@@ -3,7 +3,7 @@
     <body>
         This is a test of embedding an image in HTML and relate the img
         tag in the HTML document with the image by mailsend while sending
-        mail. We will create an img tag in the document with:
+        mail. We will create an img tag in the HTML document with:
         <pre>
             &lt;img src="cid:xx_deadbeefcafe" alt="inline imge"&gt;
         </pre>
@@ -13,10 +13,12 @@
 Notice: only content id is specified with cid, no path of image is specified.
 <p>
         While sending mail with mailsend, we will specify the content id
-        xx_deadbeefcafe as fifth argument with -attach for the html file
+        xx_deadbeefcafe as fifth field with -attach for the html file
         and the image. 
         <p>
 <b>Example:</b>
+<p>
+Note: Requires mailsend v1.17b15+:
         <pre>
   mailsend -port 587 -smtp smtp.gmail.com \
    -from example@gmail.com -to example@gmail.com \
@@ -32,6 +34,7 @@ Notice: only content id is specified with cid, no path of image is specified.
        display the html and the image together. Without the content id, the HTML
        and the image will show up as 2 separate attachments.
        <p>
-       gmail or outlook can display HTML file with embedded image
+       Tested with gmail, outlook and yahoo mail which can display HTML 
+       file with embedded image.
     </body>
 </html>
